[package]
name = "shm-cached"
version = "0.1.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gethostname = "0.4"
flexihash = "0.1"
futures = "0.3"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
privdrop = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-rustls-acme = "0.2.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
utime = "0.3"
http = "0.2.9"
serde_json = "1.0.105"
serde = "1.0.188"
httpdate = "1.0.3"

[build-dependencies]
anyhow = "1"
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
